objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Account Management</fullName>
        <description>General Account Management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BBB</fullName>
        <description>BBB License Changes</description>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Engineering</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Bulk Project</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cancellation Request</fullName>
        <description>Support Process for Cancellation Requests</description>
        <isActive>true</isActive>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Paid in Full</fullName>
        </values>
        <values>
            <fullName>Ready for Processing</fullName>
        </values>
        <values>
            <fullName>Urgent Processing</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contractor Validation</fullName>
        <description>Used to store records on whether or not a professional is cleared to work in Porch Insurance/Bank Partnerships</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>General Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IT Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting on Third Party</fullName>
        </values>
        <values>
            <fullName>Waiting on User Feedback</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>License Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Submitted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Mis-Sold</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Created in Error</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner_Case_Owner__c</fullName>
        <formula>IF (Account.OwnerId &lt;&gt;  OwnerId, 1, 0)</formula>
        <label>Account Owner/Case Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot;&amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Asana_Link__c</fullName>
        <label>Asana Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BBB_URL__c</fullName>
        <formula>Account.BBB_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BBB URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Request_Reason__c</fullName>
        <label>Cancellation Request Reason</label>
        <picklist>
            <picklistValues>
                <fullName>DELINQUENT_ACCOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT_BUSINESS_FAILING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT_INVESTMENT_TIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT_SEASONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIT_TOO_BUSY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMEOWNER_BAD_CONTACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMEOWNER_MANY_CALLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMEOWNER_NON_RESPONSIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMEOWNER_UNAVAILABLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOMEOWNER_UNAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAD_QUALITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEAD_QUANTITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEADS_FAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT_OF_SCOPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRO_ELIGIBILITY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT_ISSUES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT_LOWES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT_PORCH_ASSIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT_SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROJECT_LOW_VALUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES_MISSOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales_Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALES_REMORSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seller_Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscribed to Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WRITE_OFF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancellation_Vetting__c</fullName>
        <label>Save Value</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Save</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Age_in_Hours__c</fullName>
        <formula>CreatedDate- Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age in Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Key__c</fullName>
        <formula>Account.Porch_com_Company_Key_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Role__c</fullName>
        <description>Identifies the role of the account owner which this case is related to.</description>
        <label>Creator Role</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Amount_Due__c</fullName>
        <label>Current Amount Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Went_Past_Due__c</fullName>
        <description>Used for delinquent accounts. Date when subscription went past due.</description>
        <label>Date Went Past Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Delinquent__c</fullName>
        <formula>TODAY() - datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Delinquent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Past_Due__c</fullName>
        <label>Days Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delinquency_Reason__c</fullName>
        <description>Reasons why an account went delinquent.</description>
        <label>Delinquency Reason</label>
        <picklist>
            <picklistValues>
                <fullName>AM Unable to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Had Insufficient Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Credit Card to Cancel Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Cancelled Due to Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New CC Not on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delinquent_Date__c</fullName>
        <description>Date that this account was reported delinquent</description>
        <label>Delinquent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_in_Hours__c</fullName>
        <description>To capture hours devoted to resolving Case</description>
        <inlineHelpText>Hours worked to resolve</inlineHelpText>
        <label>Effort in Hours</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery_Date__c</fullName>
        <label>Estimated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>After Hours Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>App Usability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Porch Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Dev Iniquity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklist Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking: Project Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking: Pro No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking 1 Star Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking 3 Star Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking 4 Star Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking 5 Star Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booking Charge Dispute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::Publishing Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::Remove profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::suppressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::upheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::Walkthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review::Wrong Star Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Save::Zips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal Business Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Area Related-Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signing Up::Troubleshoot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signing Up::Walkthrough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Authority__c</fullName>
        <description>This is the name or URL of the issuing authority, i.e State or County</description>
        <inlineHelpText>This is the name or URL of the issuing authority, i.e State or County</inlineHelpText>
        <label>License Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date__c</fullName>
        <inlineHelpText>Enter Pro&apos;s license expiration date</inlineHelpText>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <label>License Number</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Major Project Indicator</description>
        <inlineHelpText>Requires more than 3 hours of work</inlineHelpText>
        <label>Major Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mis_Sold_Reason__c</fullName>
        <inlineHelpText>DK: Didn&apos;t Know</inlineHelpText>
        <label>Mis-Sold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>DK: 90 Commitment and auto payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK: 1 of 4 Pros Getting Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK: need to provide data to be successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told: Porch guarantees a specific # of leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told: It is only a 1 month trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told: Someone will call them before their next charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told: Lowe’s PSE/PSI is going away</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told: They are the only one getting Lowe’s leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Untargeted Pro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <formula>Account.Monthly_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Subscription_Fee__c</fullName>
        <label>Original Subscription Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Detail__c</fullName>
        <label>Other Detail</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Detail__c</fullName>
        <label>Outcome Detail</label>
        <picklist>
            <controllingField>Outcome__c</controllingField>
            <picklistValues>
                <fullName>Business License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Different Company Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid License Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid License Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Database</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Verify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Zips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Hold - Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Type Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-bundle Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-bundle Upsell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>True Save</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Code Swap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Missold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoC Takeover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No call recorded/new hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owned_by_Queue__c</fullName>
        <formula>IF (LEFT(OwnerId, 3) = &quot;00G&quot;,
1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned by Queue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Porch_URL__c</fullName>
        <formula>Account.Porch_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Porch URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Vet_Status__c</fullName>
        <label>Pre-Vet Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Premium_Hold_Pitched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Hold Pitched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Key__c</fullName>
        <description>Contractor Validation project key</description>
        <label>Project Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects_Rejected__c</fullName>
        <label>Projects Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projects_Uploaded__c</fullName>
        <label>Projects Uploaded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <description>Date Requested to Complete Requirement</description>
        <inlineHelpText>Date Requested to Complete Requirement</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seller_Role__c</fullName>
        <label>Seller Role</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Key__c</fullName>
        <label>Sub Key</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; $1,000,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>This is used to create a unique key for stopping duplicate through API. &quot;Fail safe for kafka time out issue.&quot;</description>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zendesk__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__Initially_Assigned_At__c</fullName>
        <label>Initially Assigned At</label>
        <type>DateTime</type>
    </fields>
</CustomObject>